Define command and tree contributions

--- a/package.json
+++ b/package.json
@@ -1,36 +1,61 @@
 {
-    "name": "hdfsbrowser",
-    "displayName": "hdfsbrowser",
-    "description": "A file browser implementation for connecting to and listing contents of HDFS files and folders",
-    "version": "0.0.1",
-    "publisher": "kcunnane",
-    "engines": {
-        "vscode": "^1.19.0"
+  "name": "hdfs",
+  "displayName": "Hadoop File Browser",
+  "description": "A file browser implementation for connecting to and listing contents of HDFS files and folders",
+  "version": "0.0.1",
+  "publisher": "kcunnane",
+  "engines": {
+    "vscode": "^1.19.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onCommand:hdfs.connect",
+    "onView:hdfs.files"
+  ],
+  "main": "./out/extension",
+  "contributes": {
+    "views": {
+      "explorer": [
+        {
+          "id": "hdfs.files",
+          "name": "HDFS Files"
+        }
+      ]
     },
-    "categories": [
-        "Other"
+    "commands": [
+      {
+        "command": "hdfs.connect",
+        "title": "Connect to HDFS folder",
+        "icon": {
+          "dark": "resources/dark/open-file.svg",
+          "light": "resources/light/open-file.svg"
+        }
+      }
     ],
-    "activationEvents": [
-        "onCommand:extension.sayHello"
-    ],
-    "main": "./out/extension",
-    "contributes": {
-        "commands": [{
-            "command": "extension.sayHello",
-            "title": "Hello World"
-        }]
-    },
-    "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "tsc -p ./",
-        "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
-    },
-    "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6",
-        "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+    "menus": {
+      "view/title": [
+        {
+            "command": "hdfs.connect",
+            "when": "view == hdfs.files",
+            "group": "navigation@1"
+        }
+      ]
     }
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "postinstall": "node ./node_modules/vscode/bin/install",
+    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+  },
+  "devDependencies": {
+    "@types/mocha": "^2.2.42",
+    "@types/node": "^7.0.43",
+    "typemoq": "^2.1.0",
+    "typescript": "^2.6.1",
+    "vscode": "^1.1.6"
+  }
 }
