Test to check whether node is added on connecting to HDFS

--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "menus": {
       "view/title": [
         {
-            "command": "hdfs.connect",
-            "when": "view == hdfs.files",
-            "group": "navigation@1"
+          "command": "hdfs.connect",
+          "when": "view == hdfs.files",
+          "group": "navigation@1"
         }
       ]
     }
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.43",
+    "should": "^13.2.1",
     "typemoq": "^2.1.0",
     "typescript": "^2.6.1",
     "vscode": "^1.1.6"
